Add Context abstraction, for scoping of names